<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <parent>
        <artifactId>springPetClinic</artifactId>
        <groupId>com.mcs</groupId>
        <version>0.0.4-SNAPSHOT</version>
    </parent>
    <modelVersion>4.0.0</modelVersion>

    <artifactId>petClinicWeb</artifactId>

    <properties>
        <maven.compiler.source>11</maven.compiler.source>
        <maven.compiler.target>11</maven.compiler.target>

        <!-- webjars -->
        <webjars-bootstrap.version>5.1.3</webjars-bootstrap.version>
        <webjars-font-awesome.version>4.7.0</webjars-font-awesome.version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>com.mcs</groupId>
            <artifactId>petClinicData</artifactId>
            <version>0.0.4-SNAPSHOT</version>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-actuator</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-thymeleaf</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-web</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-devtools</artifactId>
            <scope>runtime</scope>
            <optional>true</optional>
        </dependency>

        <!-- WEBJARS, JQUERY, TWITTER BOOTSTRAP -->
        <dependency>
            <groupId>org.webjars</groupId>
            <artifactId>webjars-locator-core</artifactId>
        </dependency>
        <dependency>
            <groupId>org.webjars.npm</groupId>
            <artifactId>bootstrap</artifactId>
            <version>${webjars-bootstrap.version}</version>
        </dependency>
        <dependency>
            <groupId>org.webjars.npm</groupId>
            <artifactId>font-awesome</artifactId>
            <version>${webjars-font-awesome.version}</version>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <!-- FOR SASS PREPROCESSOR -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-dependency-plugin</artifactId>
                <executions>
                    <execution>
                        <id>unpack</id>
                        <?m2e execute onConfiguration,onIncremental?>
                        <phase>generate-resources</phase>
                        <goals>
                            <goal>unpack</goal>
                        </goals>
                        <configuration>
                            <artifactItems>
                                <artifactItem>
                                    <groupId>org.webjars.npm</groupId>
                                    <artifactId>bootstrap</artifactId>
                                    <version>${webjars-bootstrap.version}</version>
                                </artifactItem>
                            </artifactItems>
                            <outputDirectory>${project.build.directory}/webjars</outputDirectory>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>com.gitlab.haynes</groupId>
                <artifactId>libsass-maven-plugin</artifactId>
                <version>0.2.26</version>
                <executions>
                    <execution>
                        <phase>generate-resources</phase>
                        <?m2e execute onConfiguration,onIncremental?>
                        <goals>
                            <goal>compile</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <inputPath>${basedir}/src/main/scss/</inputPath>
                    <outputPath>${basedir}/src/main/resources/static/resources/css/</outputPath>
                    <includePath>${project.build.directory}/webjars/META-INF/resources/webjars/bootstrap/${webjars-bootstrap.version}/scss/</includePath>
                </configuration>
            </plugin>

        </plugins>
    </build>

</project>